[package]
name = "krc-rs"
version = "0.1.0"
authors = ["Jason <m.jason.liu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "krc_rs"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.19"
actix-web = "3"
actix-cors = "0.5.3"